--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,48 @@
 body {
-    background-color: powderblue;
+    background-color:black;
   }
-  h1 {
 
-    text-align: center;
-    color: red;
-  }
-  p {
-    text-align: center;
-    color: black;
-  }
+  
+ header {
+  background-color:red;
+  color: white;
+  font-size: xx-large;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  padding: 10px;
+  text-align: center;
+ }
+
+ #navbar {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: red;
+  background-image: linear-gradient(180deg, red, tomato);
+
+  
+}
+
+li a {
+  float: left;
+  display: block;
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  font-size: large;
+  text-align: center;
+  padding: 15px 15px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color:tomato;
+}
+
+p {
+  text-align: center;
+  color:white;
+}
+
   
