--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 body {
-    background-color:black;
-    margin: 0;
-  }
+  background-color:black;
+  margin: 0;
+}
 
- header {
+header {
   background-color:red;
   color: white;
   font-size: xx-large;
@@ -11,36 +11,34 @@ body {
   font-weight: bold;
   padding: 20px;
   text-align: center;
- }
+}
 
- #navbar {
+.headerButton {
+  border: none;
+  color: black;
+  font-size:20px;
+  margin: 10px;
+  padding: 8px;
+  overflow: hidden;
+}
+
+.left {
+  float: left;
+}
+
+.right {
+  float: right;
+}
+
+.topNavBar {
   list-style-type: none;
   margin: 0;
   padding: 0;
   background-color: red;
-
   overflow: hidden;
 }
 
-  .headerButton {
-    border: none;
-    color: black;
-    font-size:20px;
-    margin: 10px;
-    padding: 8px;
-    overflow: hidden;
-  }
-
-  .left {
-    float: left;
-  }
-
-  .right {
-    float: right;
-  }
-
-
-li a {
+.topNavBar a{
   float: left;
   display: block;
   color: white;
@@ -50,14 +48,44 @@ li a {
   text-align: center;
   padding: 15px 15px;
   text-decoration: none;
-}
+  }
 
-li a:hover {
+.topNavBar a:hover {
   background-color:tomato;
 }
 
+
+.socialMenu{
+
+  list-style-type: none;
+  float: left;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  width: 20%;
+  background-color: white;
+}
+
+.socialMenu button{
+
+  float: left;
+  display: block;
+  color: black;
+  width: 100%;
+  height: 100px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  font-size: large;
+  text-align: center;
+  padding: 15px 15px;
+  text-decoration: none;
+
+}
+
+
+
 p {
-  text-align: left;
+  text-align: center;
   color:white;
 }
 
