--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,6 @@ header {
 
 
 .socialMenu{
-
   list-style-type: none;
   float: left;
   margin: 0;
@@ -67,7 +66,6 @@ header {
 }
 
 .socialMenu button{
-
   float: left;
   display: block;
   color: black;
@@ -80,6 +78,41 @@ header {
   padding: 15px 15px;
   text-decoration: none;
 
+}
+
+.featuredReview{
+  list-style-type: none;
+  float: left;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  width: 80%;
+  background-color: white;
+}
+
+.featuredReview Button{
+  float: left;
+  display: block;
+  color: black;
+  width: 100%;
+  height: 600px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  font-size: large;
+  text-align: center;
+  padding: 15px 15px;
+  text-decoration: none;
+}
+
+
+.mainMenu{
+  list-style-type: none;
+  float: left;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  width: 80%;
+  background-color: white;
 }
 
 
