Added comments and known issues

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,6 @@
+
+
+
 body {
   background-color:black;
   margin: 0;
@@ -13,11 +16,25 @@ header {
   text-align: center;
 }
 
+/*
+headerButton
+
+KNOWN ISSUE: PADDING
+Increasing the size of the padding causeing
+black to render over the below navbar.
+I believe this issue has something to do with 
+the button being rendered overlapping the 
+navbar in some way. - Ryan 
+
+headButton contains the CSS properties for 
+the "Create Account", "Log in", "search" and 
+"Cart" buttons along the top of the screen.
+*/
 .headerButton {
   border: none;
   color: black;
   font-size:20px;
-  margin: 5px;
+  margin: 10px;
   padding: 5px;
   overflow: hidden;
 }
