--- a/styles.css
+++ b/styles.css
@@ -88,6 +88,18 @@ background-color: grey;
   width: 20%;
 }
 
+.socialMenu ul{
+
+  overflow:hidden; 
+  overflow-y:scroll;
+  height: auto;
+  height:calc(100vh - 170px);
+  padding-left: 0;
+  padding-top: 0;
+  margin-top: 0;
+
+}
+
 .socialMenu button{
   background-color: white;
   color: black;
