--- a/styles.css
+++ b/styles.css
@@ -92,11 +92,12 @@ background-color: grey;
 
   overflow:hidden; 
   overflow-y:scroll;
-  height: auto;
-  height:calc(100vh - 170px);
+  height: 2280px;
   padding-left: 0;
   padding-top: 0;
   margin-top: 0;
+  padding-bottom: 0;
+  margin-bottom: 0;
 
 }
 
@@ -168,7 +169,7 @@ margin: 0px;
   background-color: white;
   overflow:hidden; 
   overflow-y:scroll;
-  height: 300px;
+  height: 1600px;
   padding-left: 0;
   list-style: none;
   width: 40%;
