--- a/styles.css
+++ b/styles.css
@@ -61,14 +61,14 @@ background-color: grey;
 }
 
 .topNavBar a{
-  float: left;
-  display: block;
+  float: right;
+  display: in-line;
   color: white;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
   font-size: large;
   text-align: center;
-  padding: 15px 15px;
+  padding: 15px 90px;
   text-decoration: none;
   }
 
@@ -92,7 +92,7 @@ background-color: grey;
 
   overflow:hidden; 
   overflow-y:scroll;
-  height: 2280px;
+  height: 880px;
   padding-left: 0;
   padding-top: 0;
   margin-top: 0;
@@ -168,8 +168,8 @@ margin: 0px;
 .mainMenu ul{
   background-color: white;
   overflow:hidden; 
-  overflow-y:scroll;
-  height: 1600px;
+  overflow-y:scroll; 
+  height: 200px;
   padding-left: 0;
   list-style: none;
   width: 40%;
