--- a/styles.css
+++ b/styles.css
@@ -2,12 +2,12 @@
 
 
 body {
-  background-color:white;
+  background-color:rgb(18,18,18);
   margin: 0;
 }
 
 header {
-  background-color:red;
+  background-color:rgb(25,25,25);
   color: white;
   font-size: xx-large;
   font-family: Arial, Helvetica, sans-serif;
@@ -32,16 +32,21 @@ the "Create Account", "Log in", "search" and
 */
 .headerButton {
   border: none;
-  background-color: White;
-  color: black;
+  background-color: #03DAC5;
+  color: color;
   font-size:20px;
   margin: 10px;
   padding: 5px;
   overflow: hidden;
+  border-radius: 15px;
+}
+
+#headerButtons{
+  color: rgba(187,134,252, 200);
 }
 
 .headerButton:hover {
-background-color: grey;
+background-color: rgb(45, 45, 45);
 }
 
 .left {
@@ -53,8 +58,8 @@ background-color: grey;
 }
 
 .topNavBar {
-  background-color: red;
-  color: white;
+  background-color: rgb(25,25,25);
+  color: rgb(18,18,18);
   list-style-type: none;
   margin: 0;
   padding: 0;
@@ -63,7 +68,7 @@ background-color: grey;
 }
 
 .topNavBar a{
-  background-color: red;
+  background-color: rgb(25,25,25);
   float: left;
   display: block;
   color: white;
@@ -73,16 +78,21 @@ background-color: grey;
   text-align: center;
   padding: 15px 15px;
   text-decoration: none;
+  border-radius:10px;
+  border-style: solid;
+  border-width: 2px;
+  border-color: white;
+  margin: 5px;
   }
 
 .topNavBar a:hover {
-  background-color:tomato;
+  background-color:rgb(45, 45, 45);
 }
 
 
 .socialMenu{
-  background-color: white;
-  color: black;
+  background-color: rgb(18,18,18);
+  color: rgb(25,25,25);
   list-style-type: none;
   float: left;
   margin: 0;
@@ -105,12 +115,12 @@ background-color: grey;
 }
 
 .socialMenu button{
-  background-color: white;
-  color: black;
+  background-color: rgb(25,25,25);
+  color: white;
 
   float: left;
   display: block;
-  width: 100%;
+  width: 95%;
   height: 200px;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
@@ -118,26 +128,27 @@ background-color: grey;
   text-align: center;
   padding: 15px 15px;
   text-decoration: none;
+  margin: 5px 5px 5px 5px;
 }
 
 .socialMenu button:hover{
-  background-color: lightgray;
+  background-color: rgb(45, 45, 45);
 }
 
 .featuredReview{
   background-color: white;
-  color: black;
+  color: rgb(25,25,25);
   list-style-type: none;
   float: left;
-  margin: 0;
   padding: 0;
   text-align: center;
-  width: 80%;
+  width: 78%;
+  margin: 14px 10px 14px 14px;
 }
 
 .featuredReview Button{
-  background-color: white;
-  color: black;
+  background-color: rgb(25,25,25);
+  color: white;
 
   float: left;
   display: block;
@@ -152,15 +163,15 @@ background-color: grey;
 }
 
 .featuredReview Button:hover{
-  background-color: lightgray;
+  background-color: rgb(45, 45, 45);
 }
 
 
 
 .mainMenu h2{
 
-background-color: red;
-color: white;
+background-color: rgb(18,18,18);
+color: rgba(187,134,252, 200);
 font-family: Arial, Helvetica, sans-serif;
 text-align: center;
 width: auto;
@@ -170,7 +181,7 @@ margin: 0px;
 
 
 .mainMenu ul{
-  background-color: white;
+  background-color: rgb(18,18,18);
   overflow:hidden; 
   overflow-y:scroll;
   height: 1600px;
@@ -182,8 +193,8 @@ margin: 0px;
 
 
 .mainMenu a{
-  background-color: white;
-  color: black;
+  background-color: rgb(25,25,25);
+  color: white;
   float: left;
   display: block;
   font-family: Arial, Helvetica, sans-serif;
@@ -199,7 +210,7 @@ margin: 0px;
 
 .mainMenu a:hover{
 
-  background-color: lightgrey;
+  background-color: lightrgb(45, 45, 45);
 
 }
 
@@ -223,7 +234,7 @@ p {
 }
 
 #searchBar{
-  background-color:white;
+  background-color:#03DAC5;
   width: 35px;
   height: 35px;
   border-radius: 10px;
@@ -235,6 +246,9 @@ p {
   background-position: 0px -2px;
   background-size: 40px 40px;
   background-repeat: no-repeat;
+  font-size: 20px;
+  border-style:solid;
+  border-color: #03DAC5;
 }
 
 #searchBar:focus{
@@ -258,7 +272,7 @@ p {
   width: 270px;
   height: 500px;
   float: right;
-  background-color: white;
+  background-color: rgb(35, 35, 35);
   position: absolute;
   right: 10px;
   top: 90px;
@@ -278,15 +292,12 @@ p {
   bottom: 20px;
   right: 10px;
   left: 10px;
-  color: white;
-  background-color: red;
+  color: black;
+  background-color: #03DAC5;
   font-size: 1px;
   font-family: Arial;
   font-weight: bold;
   border-radius: 15px;
-  border-style: solid;
-  border-color: rgba(0, 0, 0, 0.7);
-  border-width: 2px;
   animation-name: proceedOpen;
   animation-duration: 0.25s;
   animation-timing-function: ease-out;
@@ -317,7 +328,7 @@ p {
   bottom: 0;
   width: auto;
   padding: 20px;
-  background-color: red;
+  background-color: rgb(25,25,25);
   color: white;
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
@@ -345,4 +356,23 @@ p {
   border-radius: 15px;
   border-style: solid;
   border-width: 3px;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: rgb(18, 18, 18); 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgb(35, 35, 35); 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(45, 45, 45); 
 }
