--- a/styles.css
+++ b/styles.css
@@ -62,8 +62,8 @@ background-color: rgb(45, 45, 45);
   color: rgb(18,18,18);
   list-style-type: none;
   margin: 0;
-  padding: 0;
   overflow: hidden;
+  float: right;
   width: 100%;
 }
 
@@ -83,6 +83,7 @@ background-color: rgb(45, 45, 45);
   border-width: 2px;
   border-color: white;
   margin: 5px;
+  
   }
 
 .topNavBar a:hover {
@@ -129,6 +130,7 @@ background-color: rgb(45, 45, 45);
   padding: 15px 15px;
   text-decoration: none;
   margin: 5px 5px 5px 5px;
+  border-radius: 15px;
 }
 
 .socialMenu button:hover{
@@ -136,7 +138,7 @@ background-color: rgb(45, 45, 45);
 }
 
 .featuredReview{
-  background-color: white;
+  background-color: rgb(18, 18, 18);
   color: rgb(25,25,25);
   list-style-type: none;
   float: left;
@@ -144,6 +146,7 @@ background-color: rgb(45, 45, 45);
   text-align: center;
   width: 78%;
   margin: 14px 10px 14px 14px;
+  border-radius: 25px;
 }
 
 .featuredReview Button{
@@ -160,6 +163,7 @@ background-color: rgb(45, 45, 45);
   text-align: center;
   padding: 15px 15px;
   text-decoration: none;
+  border-radius: 25px;
 }
 
 .featuredReview Button:hover{
@@ -168,15 +172,17 @@ background-color: rgb(45, 45, 45);
 
 
 
-.mainMenu h2{
+.mainMenu h1{
 
-background-color: rgb(18,18,18);
+background-color: rgb(35, 35, 35);
 color: rgba(187,134,252, 200);
 font-family: Arial, Helvetica, sans-serif;
 text-align: center;
 width: auto;
 padding: 20px;
 margin: 0px;
+border-radius: 25px;
+margin-top: 100px;
 }
 
 
@@ -185,9 +191,12 @@ margin: 0px;
   overflow:hidden; 
   overflow-y:scroll;
   height: 1600px;
-  padding-left: 0;
+  padding: 0;
   list-style: none;
   width: auto;
+  border-bottom-right-radius: 25px;
+  border-bottom-left-radius: 25px;
+
 
 }
 
@@ -203,15 +212,22 @@ margin: 0px;
   text-decoration: none;
   float: left;
   margin: 0;
-  padding: 15px 0px 15px 0px;
+  padding: 15px 0px 15px 30px;
   width: 100%;
   height: 50px;
 }
 
+
 .mainMenu a:hover{
 
-  background-color: lightrgb(45, 45, 45);
+  background-color: rgb(45, 45, 45);
 
+}
+
+#menu{
+  background-color: rgb(25, 25, 25);
+  margin: 675px 15px 50px 310px;
+  border-radius: 25px;
 }
 
 p {
