--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 
 
 body {
-  background-color:rgb(18,18,18);
+background-color:rgb(18,18,18);
   margin: 0;
 }
 
@@ -12,8 +12,9 @@ header {
   font-size: xx-large;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin: 0;
   width: 100%;
   text-align: center;
 }
@@ -65,16 +66,16 @@ background-color: rgb(45, 45, 45);
   background-color: rgb(25,25,25);
   color: rgb(18,18,18);
   list-style-type: none;
-  margin: 0px;
+  margin: 0;
   overflow-x: hidden;
   overflow-y: hidden;
   float: left;
   width: 100%;
-  padding-bottom: 20px;
+  padding-bottom: 10px;
   padding-left: 0%;
-  padding-top: 20px;
+  padding-top: 10px;
+  top: -40px;
   position:relative;
-  top:-22px;
 }
 
 .topNavBar a{
@@ -105,7 +106,6 @@ background-color: rgb(45, 45, 45);
   width:300px;
   height:80px;
   position: relative;
-  top: -15px;
 }
 
 
