--- a/styles.css
+++ b/styles.css
@@ -163,6 +163,7 @@ background-color: rgb(45, 45, 45);
   padding: 0;
   text-align: center;
   width: 78%;
+  height: 40%;
   margin: 0px 10px 14px 14px;
   border-radius: 25px;
 }
@@ -255,7 +256,9 @@ margin-top: 0px;
 
 #menu{
   background-color: rgb(25, 25, 25);
-  margin: 730px 15px 50px 310px;
+  margin-top: 29%;
+  margin-left: 20%;
+  margin-right: 1%;
   border-radius: 25px;
 }
 
