--- a/styles.css
+++ b/styles.css
@@ -65,23 +65,26 @@ background-color: rgb(45, 45, 45);
 .topNavBar {
   background-color: rgb(25,25,25);
   color: rgb(18,18,18);
-  list-style-type: none;
+  list-style: none;
   margin: 0;
   overflow-x: hidden;
   overflow-y: hidden;
   float: left;
   width: 100%;
   padding-bottom: 10px;
-  padding-left: 0%;
+  text-align: center;
   padding-top: 10px;
   top: -40px;
   position:relative;
 }
 
+.topNavBar li{
+    display: inline;
+}
+
 .topNavBar a{
   background-color: rgb(25,25,25);
-  float: left;
-  display: block;
+  display: inline-block;
   color: white;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
@@ -93,6 +96,7 @@ background-color: rgb(45, 45, 45);
   border-width: 2px;
   border-color: white;
   margin-left: 15px;
+
   font-size: 30px;
   padding: 5px 5px;
   
@@ -171,16 +175,16 @@ background-color: rgb(45, 45, 45);
 .featuredReview Button{
   background-color: rgb(25,25,25);
   color: white;
-
   float: left;
   display: block;
   width: 100%;
   height: 600px;
+  margin: auto;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
   font-size: large;
   text-align: center;
-  padding: 15px 15px;
+  padding:0;
   text-decoration: none;
   border-radius: 25px;
 }
@@ -198,7 +202,7 @@ color: rgba(187,134,252, 200);
 font-family: Arial, Helvetica, sans-serif;
 text-align: center;
 width: auto;
-padding: 20px;
+height: 70px;
 border-radius: 25px;
 margin-top: 0px;
 }
