--- a/styles.css
+++ b/styles.css
@@ -202,7 +202,8 @@ color: rgba(187,134,252, 200);
 font-family: Arial, Helvetica, sans-serif;
 text-align: center;
 width: auto;
-height: 70px;
+padding: 20px;
+
 border-radius: 25px;
 margin-top: 0px;
 }
