--- a/styles.css
+++ b/styles.css
@@ -74,6 +74,8 @@ background-color: rgb(45, 45, 45);
   padding-bottom: 10px;
   text-align: center;
   padding-top: 10px;
+  padding-left: 0;
+  padding-right: 0;
   top: -40px;
   position:relative;
 }
