--- a/styles.css
+++ b/styles.css
@@ -116,6 +116,8 @@ background-color: rgb(45, 45, 45);
 
 
 .socialMenu{
+  position: sticky;
+  top: 0;
   background-color: rgb(18,18,18);
   color: rgb(25,25,25);
   list-style-type: none;
@@ -128,9 +130,11 @@ background-color: rgb(45, 45, 45);
 
 .socialMenu ul{
 
+  position: sticky;
+  top: 0;
   overflow:hidden; 
   overflow-y:scroll;
-  height: 1400px;
+  height: 1200px;
   padding-left: 0;
   padding-top: 0;
   margin-top: 0;
