--- a/styles.css
+++ b/styles.css
@@ -237,17 +237,42 @@ margin-top: 0px;
   display: block;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
-  font-size: large;
+  font-size: xx-large;
   text-decoration: none;
   float: left;
-  margin: 0;
+  margin: 5px;
   padding: 15px 0px 15px 30px;
   width: 100%;
   height: 50px;
+  border-style: solid;
+  border-color: white;
+  border-radius: 25px;
+  width: 90%;
+}
+
+.mainMenu button{
+  background-color: rgb(25,25,25);
+  color: white;
+  float: left;
+  display: block;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  font-size: xx-large;
+  text-decoration: none;
+  float: left;
+  margin: 5px;
+  padding: 15px 0px 15px 30px;
+  width: 100%;
+  height: 50px;
+  border-style: solid;
+  border-color: white;
+  border-radius: 25px;
+  width: 90%;
+  text-align: left;
 }
 
 
-.mainMenu a:hover{
+.mainMenu button:hover{
 
   background-color: rgb(45, 45, 45);
 
