--- a/styles.css
+++ b/styles.css
@@ -45,18 +45,6 @@ the "Create Account", "Log in", "search" and
   font-weight: bold;
 }
 
-.cancelButton {
-  border: none;
-  background-color: rgb(255,0,0);
-  color: color;
-  font-size:22px;
-  margin: 10px;
-  padding: 5px;
-  overflow: hidden;
-  border-radius: 15px;
-  font-weight: bold;
-}
-
 #headerButtons{
   color: rgba(187,134,252, 200);
   
@@ -64,10 +52,6 @@ the "Create Account", "Log in", "search" and
 
 .headerButton:hover {
 background-color: rgb(45, 45, 45);
-}
-
-.cancelButton:hover {
-background-color: rgba(255, 0, 0, 0.4);
 }
 
 .left {
@@ -113,7 +97,8 @@ background-color: rgba(255, 0, 0, 0.4);
   border-style: solid;
   border-width: 2px;
   border-color: white;
-  margin: 5px;
+  margin-left: 15px;
+
   font-size: 30px;
   padding: 5px 5px;
   
@@ -127,7 +112,6 @@ background-color: rgba(255, 0, 0, 0.4);
   width:300px;
   height:80px;
   position: relative;
-  top: -15px;
 }
 
 
@@ -150,7 +134,7 @@ background-color: rgba(255, 0, 0, 0.4);
   top: 0;
   overflow:hidden; 
   overflow-y:scroll;
-  height: 1400px;
+  height: 1200px;
   padding-left: 0;
   padding-top: 0;
   margin-top: 0;
@@ -189,6 +173,7 @@ background-color: rgba(255, 0, 0, 0.4);
   padding: 0;
   text-align: center;
   width: 78%;
+  height: 40%;
   margin: 0px 10px 14px 14px;
   border-radius: 25px;
 }
@@ -224,6 +209,7 @@ font-family: Arial, Helvetica, sans-serif;
 text-align: center;
 width: auto;
 padding: 20px;
+
 border-radius: 25px;
 margin-top: 0px;
 }
@@ -243,8 +229,9 @@ margin-top: 0px;
   background-color: rgb(18,18,18);
   overflow:hidden; 
   overflow-y:scroll;
-  height: 600px;
-  padding: 0;
+  height: 625px;
+  padding-left: 0;
+  padding-top: 0;
   list-style: none;
   width: auto;
   border-bottom-right-radius: 25px;
@@ -305,7 +292,9 @@ margin-top: 0px;
 
 #menu{
   background-color: rgb(25, 25, 25);
-  margin: 730px 15px 50px 310px;
+  margin-top: 29%;
+  margin-left: 20%;
+  margin-right: 1%;
   border-radius: 25px;
 }
 
@@ -335,6 +324,7 @@ p {
   border-radius: 10px;
   float: right;
   position: relative;
+  margin-right: 20px;
   top: -75px;
   left: -100px;
   transition: width 0.25s;
@@ -473,56 +463,4 @@ p {
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background: rgb(45, 45, 45); 
-}
-
-
-
-
-
-
-
-
-/*for login and create account*/
-input {
-		width: 100%;
-		padding: 12px 20px;
-		margin: 8px 0;
-		box-sizing: border-box;
-		border: 2px solid red;
-		border-radius: 4px;
-	}
-	
-input:focus {
-		background-color: lightblue;
-	}
-
-
-.modal {
-  display: none; 
-  position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgb(25,25,25);
-  padding: 60px;
-}
-
-.modal-content {
-  margin: 5% auto 15% auto;
-  border: 1px solid #888;
-  width: 60%;
-  padding: 60px;
-}
-
-
-.animate {
-  animation: animatezoom 0.6s
-}
-
-@keyframes animatezoom {
-  from {transform: scale(0)} 
-  to {transform: scale(1)}
 }
