--- a/styles.css
+++ b/styles.css
@@ -45,6 +45,21 @@ the "Create Account", "Log in", "search" and
   font-weight: bold;
 }
 
+
+
+.cancelButton {
+  border: none;
+  background-color: rgb(255,0,0);
+  color: color;
+  font-size:22px;
+  margin: 10px;
+  padding: 5px;
+  overflow: hidden;
+  border-radius: 15px;
+  font-weight: bold;
+}
+
+
 #headerButtons{
   color: rgba(187,134,252, 200);
   
@@ -53,6 +68,12 @@ the "Create Account", "Log in", "search" and
 .headerButton:hover {
 background-color: rgb(45, 45, 45);
 }
+
+
+.cancelButton:hover {
+background-color: rgba(255, 0, 0, 0.4);
+}
+
 
 .left {
   float: left;
@@ -463,4 +484,52 @@ p {
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background: rgb(45, 45, 45); 
+}
+
+
+
+
+/*for login and create account*/
+input {
+		width: 100%;
+		padding: 12px 20px;
+		margin: 8px 0;
+		box-sizing: border-box;
+		border: 2px solid red;
+		border-radius: 4px;
+	}
+	
+input:focus {
+		background-color: lightblue;
+	}
+
+
+.modal {
+  display: none; 
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(25,25,25);
+  padding: 60px;
+}
+
+.modal-content {
+  margin: 5% auto 15% auto;
+  border: 1px solid #888;
+  width: 60%;
+  padding: 60px;
+}
+
+
+.animate {
+  animation: animatezoom 0.6s
+}
+
+@keyframes animatezoom {
+  from {transform: scale(0)} 
+  to {transform: scale(1)}
 }
