--- a/styles.css
+++ b/styles.css
@@ -495,7 +495,8 @@ input {
 		padding: 12px 20px;
 		margin: 8px 0;
 		box-sizing: border-box;
-		border: 2px solid red;
+		border: 2px solid rgba(187,134,252, 200);
+;
 		border-radius: 4px;
 	}
 	
@@ -506,6 +507,7 @@ input:focus {
 
 .modal {
   display: none; 
+  font-family: Arial, Helvetica, sans-serif;
   position: fixed;
   z-index: 1;
   left: 0;
