--- a/styles.css
+++ b/styles.css
@@ -323,6 +323,8 @@ p {
   font-family: Arial, Helvetica, sans-serif;
   text-align: center;
   color:white;
+  font-weight: bold;
+  font-size: large;
 }
 
 #searchInput{
