--- a/styles.css
+++ b/styles.css
@@ -192,9 +192,9 @@ background-color: rgba(255, 0, 0, 0.4);
   float: left;
   padding: 0;
   text-align: center;
-  width: 78%;
-  height: 40%;
-  margin: 0px 10px 14px 14px;
+  width: 79%;
+  height: 600px;
+  margin: 0;
   border-radius: 25px;
 }
 
