--- a/styles.css
+++ b/styles.css
@@ -265,9 +265,13 @@ background-color: rgb(45, 45, 45);
   opacity:0.6;
 }
 
+
 .featuredReviewMain{
   background-color: rgb(0,0,0);
-  background-image: url("testfoodpic1.jpg");
+  background-image: url("foodImages/burger/burger5.jpg");
+  background-size: contain, cover;
+  background-position: center;
+  background-repeat: no-repeat;
   color: white;
   float: left;
   display: block;
@@ -390,8 +394,8 @@ margin-top: 0px;
   padding: 15px 0px 15px 30px;
   margin-left: 20px;
   margin-right: 20px;
-  width: 96%;
-  height: 50px;
+  width: 98%;
+  height: 125px;
   border-style: solid;
   border-color: white;
   border-radius: 25px;
@@ -414,8 +418,8 @@ margin-top: 0px;
   float: left;
   margin: 5px;
   padding: 15px 0px 15px 30px;
-  width: 100%;
-  height: 50px;
+  width: 98%;
+  height: 125px;
   border-style: solid;
   border-color: white;
   border-radius: 25px;
