--- a/styles.css
+++ b/styles.css
@@ -84,9 +84,10 @@ background-color: rgba(255, 0, 0, 0.4);
 }
 
 .cartHeader {
-  padding: 30px;
+  padding: 2px;
+  height:10%;
   text-align: center;
-  font-size: 35px;
+  font-size: 20px;
   color: rgba(187,134,252);
 }
 .acceptButton {
@@ -107,20 +108,24 @@ background-color: rgb(45, 45, 45);
 
 .cart1 {
   width: 50%;
-  height: 500px;
+  height: 700px;
   float: left;
   padding: 15px;
   border: 1px solid white;
   color: rgba(187,134,252);
+  overflow:hidden; 
+  overflow-y:scroll;
 }
 
 .cart2 {
   width: 50%;
-  height: 500px;
+  height: 700px;
   float: right;
   padding: 15px;
   border: 1px solid white;
   color: rgba(187,134,252);
+  overflow:hidden; 
+  overflow-y:scroll;
 }
 
 .left {
@@ -254,7 +259,6 @@ background-color: rgb(45, 45, 45);
   width: 5%;
   margin-top: 5%;
   margin-right: 1%;
-  margin-left: 1%;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
   font-size: large;
@@ -267,11 +271,10 @@ background-color: rgb(45, 45, 45);
 
 .featuredReviewMain{
   background-color: rgb(0,0,0);
-  background-image: url("testfoodpic1.jpg");
   color: white;
   float: left;
   display: block;
-  width: 86%;
+  width: 87%;
   margin: auto;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
@@ -281,16 +284,8 @@ background-color: rgb(45, 45, 45);
   text-decoration: none;
   border-radius: 25px;
   opacity:0.6;
-  position: relative;
-  z-index: 0;
 }
 
-.mySlides{
-
-position: relative;
-z-index: -1;
-
-}
 
 .featuredReviewButton:hover{
   background-color: rgb(45, 45, 45);
@@ -336,10 +331,10 @@ z-index: -1;
   transform: translateY(4px);
 }
 
-.featuredReview.mySlides {
+featuredReview.mySlides {
   text-align: center;
-  height: 200px;
-  width: 200px;
+  height = 600px;
+  width = 600px;
 }
 
 .mainMenu h1{
