--- a/styles.css
+++ b/styles.css
@@ -215,8 +215,16 @@ background-color: rgb(45, 45, 45);
   height: 200px;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
-  font-size: large;
+  font-size: x-large;
   text-align: center;
+    text-shadow: -3px -3px 0 black,
+               3px -3px 0 black,
+               -3px 3px 0 black,
+               3px 3px 0 black,
+               -3px 0 0 black,
+               3px 0 0 black,
+               0 -3px 0 black,
+               0 3px 0 black;
   padding: 15px 15px;
   text-decoration: none;
   margin: 5px 5px 5px 5px;
@@ -267,18 +275,25 @@ background-color: rgb(45, 45, 45);
   background-position: center;
   background-repeat: no-repeat;
   color: white;
+  text-shadow: -3px -3px 0 black,
+               3px -3px 0 black,
+               -3px 3px 0 black,
+               3px 3px 0 black,
+               -3px 0 0 black,
+               3px 0 0 black,
+               0 -3px 0 black,
+               0 3px 0 black;
   float: left;
   display: block;
   width: 86%;
   margin: auto;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
-  font-size: large;
+  font-size: xx-large;
   text-align: center;
   padding:0;
   text-decoration: none;
   border-radius: 25px;
-  opacity:0.6;
 
 }
 
@@ -686,7 +701,6 @@ p {
 
 .ReviewText {
   background-size: contain;
-  font-size: x-large;
   color:white;
   vertical-align: top;
 }
