--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ body {
 
 .grid-cart {
   height: 98vh;
-  weigth: 95vw;
+  width: 95vw;
   display: grid;
   grid-template-areas:
   'cheader cheader'
@@ -109,7 +109,7 @@ body {
   padding-top: 6px;
   height:auto;
   width:300px;
-  margin-left:0; /* use this to center */
+  left: calc(50% - 150px); /* use this to center */
   /*left:40%; */
   text-align:center;
   top:0%;
@@ -167,7 +167,6 @@ body {
 
 #checkoutButton{
   display: inline-block;
-  float:right;
   border-radius: 15px;
   border-style: solid;
   border-width: 3px;
@@ -328,6 +327,7 @@ body {
   position: sticky;
   background-color: rgb(18,18,18);
   color: rgb(25,25,25);
+  border-radius: 25px;
   list-style-type: none;
   padding: 0;
   overflow-x:hidden;
@@ -363,7 +363,7 @@ body {
   background-color: rgb(25,25,25);
   background-size: contain, cover;
   background-position: center;
-  float:left;
+  float: none;
   display:inline-block;
   width: 100%;
   height: 9vw;
