--- a/styles.css
+++ b/styles.css
@@ -540,7 +540,7 @@ body {
   text-decoration: none;
   float: left;
   margin: 5px;
-  padding: 15px 0px 15px 30px;
+  padding: 15px 30px 15px 30px;
   width: 100%;
   height: 15%;
   border-style: solid;
@@ -572,6 +572,7 @@ body {
 }
 
 .ingredients input{
+  display: inline-block;
   margin-left:50px;
 }
 
