--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ body {
   'footer footer';
   grid-gap: 0px;
   padding: 2px;
-  grid-template-rows: 6% 5% 5% 25% 50% 5% 4%;
+  grid-template-rows: 6% 6% 4% 25% 50% 5% 4%;
   grid-template-columns: 20% 80%;
 }
 
@@ -502,7 +502,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   text-align: center;
   width: auto;
-  padding: 20px;
+  padding:20px;
   font-size: 35px;
   border-radius: 25px;
   margin-top: 0px;
@@ -535,7 +535,7 @@ body {
 
 /* Actual Food and Restaurant Chocies .*/
 .mainMenu button{
-  background-color: rgb(142,89,207);
+  background-color: rgb(82,39,157);
   color: white;
   float: left;
   font-family: Arial, Helvetica, sans-serif;
@@ -543,13 +543,13 @@ body {
   font-size: xx-large;
   text-decoration: none;
   float: left;
-  margin: 5px;
-  padding: 15px 30px 15px 30px;
+  margin-top:25px;
+  padding: 15px 20px;
   width: 100%;
-  height: 15%;
-  border-style: solid;
-  border-color: white;
-  border-radius: 25px;
+  height: 18%;
+  border-width: 5px;
+  border-style: outset;
+  border-radius: 15px;
   text-align: left;
 }
 
