--- a/styles.css
+++ b/styles.css
@@ -440,6 +440,7 @@ body {
   text-align: center;
   text-decoration: none;
   border-radius: 25px;
+  margin-left: 2%;
 }
 
 /* Buttons for changing image.*/
@@ -457,6 +458,7 @@ body {
   text-align: center;
   text-decoration: none;
   border-radius: 25px;
+  margin-right: 2%;
 }
 
 .featuredReviewSideButton:hover{
