--- a/styles.css
+++ b/styles.css
@@ -688,6 +688,11 @@ body {
   background-color: rgb(45, 45, 45);
 }
 
+.addToCartButton{
+
+  background-color:#03DAC5; width:25%; text-align:center; height: 15%; padding: 10px; margin-left: 100px; font-size: 30px; color: black; border-color: black; border-radius: 15px;
+}
+
 .cart1 {
   width: 48%;
   height: 500px;
