--- a/styles.css
+++ b/styles.css
@@ -588,6 +588,36 @@ body {
 /* END OF MAIN MENU CSS .*/
 /* FOOTER CSS .*/
 
+
+.modalnew {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content-new {
+  background-color: rgb(45, 45, 45);
+  margin-top:15%;
+  margin-left:20%;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 60%; /* Could be more or less, depending on screen size */
+  height:30%;
+}
+
+
+
+
+
+
 .modal-content {
   margin: 5% auto 15% auto;
   border: 1px solid #888;
