--- a/styles.css
+++ b/styles.css
@@ -589,32 +589,52 @@ body {
 /* FOOTER CSS .*/
 
 
-.modalnew {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
+
+
+
+.modal2 {
+  display: none;
+  font-family: Arial, Helvetica, sans-serif;
+  position: fixed;
+  z-index: 1;
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(5,5,5,0.4);
+  padding: 60px;
 }
 
-/* Modal Content/Box */
-.modal-content-new {
-  background-color: rgb(45, 45, 45);
-  margin-top:15%;
-  margin-left:20%;
+/* Modal Content */
+.modal-content2 {
+  background-color: rgb(50,50,50);
+  margin-left: 20%;
   padding: 20px;
+  margin-top: 10%;
   border: 1px solid #888;
-  width: 60%; /* Could be more or less, depending on screen size */
-  height:30%;
+  width: 60%;
+  height:40%;
 }
 
 
 
+
+
+/* Modal Content */
+.modal-content-new {
+  position: relative;
+  background-color: #fefefe;
+  margin: auto;
+  padding: 0;
+  border: 1px solid #888;
+  width: 80%;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+  -webkit-animation-name: animatetop;
+  -webkit-animation-duration: 0.4s;
+  animation-name: animatetop;
+  animation-duration: 0.4s
+}
 
 
 
