--- a/styles.css
+++ b/styles.css
@@ -546,10 +546,11 @@ body {
   font-size: xx-large;
   text-decoration: none;
   float: left;
-  margin-top:25px;
+  margin-top:1.5%;
+  margin-left:6%;
   padding: 15px 20px;
-  width: 100%;
-  height: 18%;
+  width: 40%;
+  height: 25%;
   border-width: 5px;
   border-style: outset;
   border-radius: 15px;
@@ -622,6 +623,7 @@ body {
 .modal-content2 h1{
   font-size: 55px;
   margin:0;
+  display:inherit;
   text-align:center;
   color:white;
 }
@@ -669,6 +671,39 @@ body {
   border-radius: 15px;
   font-weight: bold;
 }
+
+.headerButton3 {
+  border: none;
+  background-color: rgb(235,48,11);
+  font-size:22px;
+  margin: 10px;
+  overflow: hidden;
+  padding:5px;
+  border-radius: 15px;
+  font-weight: bold;
+}
+
+.headerButton3:hover {
+  background-color: rgb(215,28,0);
+}
+
+
+.headerButton4 {
+  border: none;
+  background-color: rgb(235,48,11);
+  font-size:22px;
+  padding:5px;
+  margin: 10px;
+  overflow: hidden;
+  border-radius: 15px;
+  font-weight: bold;
+}
+
+
+.headerButton4:hover {
+  background-color: rgb(215,28,0);
+}
+
 
 
 .headerButton2:hover {
