--- a/styles.css
+++ b/styles.css
@@ -858,6 +858,22 @@ body {
   font-weight: bold;
 }
 
+.cart1 ul{
+   
+  color: rgb(187,134,252);
+  font-size: large;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+}
+
+.cart1 li{
+   
+  color: rgb(187,134,252);
+  font-size: large;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+}
+
 .cart1 label{
  
   color: rgb(187,134,252);
