--- a/styles.css
+++ b/styles.css
@@ -841,9 +841,11 @@ body {
 }
 
 .cart1 {
-  width: 48%;
+  width: 38%;
   height: 40%;
   float:left;
+  padding-left: 5%;
+  padding-right: 5%;
   border: 1px solid white;
   color: rgb(187,134,252);
   grid-area: cart1;
@@ -859,11 +861,12 @@ body {
 }
 
 .cart1 ul{
-   
+
   color: rgb(187,134,252);
   font-size: large;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
+  overflow: hidden;
 }
 
 .cart1 li{
@@ -872,6 +875,11 @@ body {
   font-size: large;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
+  overflow: hidden;
+}
+
+.cart1 p{
+  display: inline;
 }
 
 .cart1 label{
@@ -928,7 +936,7 @@ body {
 
 .footerCart {
   bottom: 0;
-  width: auto;
+  width: 84%;
   padding: 20px;
   background-color: rgb(25,25,25);
   color: white;
