--- a/styles.css
+++ b/styles.css
@@ -23,19 +23,7 @@ body {
   grid-template-columns: 20% 80%;
 }
 
-.grid-cart {
-  height: 98vh;
-  width: 95vw;
-  display: grid;
-  grid-template-areas:
-  'cheader cheader'
-  'cart1 cart2'
-  'cfooter cfooter';
-  grid-gap: 2px;
-  padding: 2px;
-  grid-template-rows: 20vh 60vh 20vh;
-  grid-template-columns: 50vw 50vw;
-}
+
 
 
 /* Specific areas in the grid.*/
@@ -866,7 +854,16 @@ body {
   font-size: large;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
+  grid-area: cart1;
   overflow: hidden;
+
+}
+
+.orderList{
+
+overflow: scroll;
+
+
 }
 
 .cart1 li{
@@ -875,7 +872,7 @@ body {
   font-size: large;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
-  overflow: hidden;
+
 }
 
 .cart1 p{
@@ -906,7 +903,6 @@ body {
   color: rgb(187,134,252);
   grid-area: cart2;
 }
-
 
 .cart2 h1{
   text-align: center;
