Added colored background gradient

--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
   background-color: rgb(25, 25, 25);
   padding: 1%;
   color: rgba(187,134,252, 200);
-  /*background-image: url("background2.jpg")*/;
+  background-image: url("background2.jpg");
 }
 
 
