--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
   background-color: rgb(25, 25, 25);
-  padding: 1%;
+  padding: 0% 1%;
   color: rgba(187,134,252, 200);
   background-image: url("background2.jpg");
 }
